[workspace]
members = ["easycar", "easycar-server", "info-car-api"]
resolver = "2"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true

[profile.profiling]
inherits = "release"
strip = false
debug = true


[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
similar_names = { level = "allow", priority = 2 }